# Murmur

./: .gitignore  DOCS.md  README.md  pyproject.toml
murmur/: __init__.py  __main__.py  audio_io.py  cli.py  dither.py  encoder.py  mixer.py  presets.py  renderer.py  spectrogram.py  utils.py
tests/: conftest.py  test_audio_io.py  test_cli.py  test_dither.py  test_encoder.py  test_mixer.py  test_presets.py  test_renderer.py  test_spectrogram.py  test_utils.py
